central-node/vcentral-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vcentral
    version: v2
  name: vcentral
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vcentral
  template:
    metadata:
      labels:
        app: vcentral
    spec:
      hostname: vcentral
      containers:
        - name: vcentral
          image: jkempf42/public-repo:v2-dev.vcentral
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /home/volttron/db
              name: vcentral-db
      nodeSelector:
        kubernetes.io/hostname: central-node
      volumes:
        - name: vcentral-db
          persistentVolumeClaim:
            claimName: vcentral-claim
