central-node/vcentral-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vcentral
    version: v2
  name: vcentral
spec:
  type: ClusterIP
  selector:
    app: vcentral
  ports:
    - name: vcentral
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: vip
      port: 22916
      protocol: TCP
